--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start:prod": "node ./dist/server.js",
     "build": "tsc",
-    "lint": "eslint src --ignore-path .eslintignore --ext .ts",
+    "lint": "npx eslint ",
     "lint:fix": "npx eslint src --fix",
     "prettier": "prettier --ignore-path .gitignore --write \".src/**/*.+(js|ts|json)\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,7 +38,7 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.15.0"
+    "typescript-eslint": "^8.16.0"
   },
   "description": ""
 }
