--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
 
-  "builds": [{ "src": "dist/server.js", "use": "@vercel/now" }],
+  "builds": [{ "src": "dist/server.js", "use": "@vercel/nod" }],
   "routes": [{ "src": "/(.*)", "dest": "dist/server.js" }]
 }
